--- a/css/styles.css
+++ b/css/styles.css
@@ -4,14 +4,14 @@
     font-size: 1.2em;
 }
 
-header{
+.header{
     display: flex;
     justify-content: center;
     align-items: center;
+    justify-content: space-between;
 }
-
 #banner{
-    width: 80vw;
+    width: 90vw;
     height: auto;
     border-radius: 1.5rem;
 }
